--- a/run_finetun.ipynb
+++ b/run_finetun.ipynb
@@ -202,10 +202,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 103,
    "id": "730b793e-a9cf-4db7-9361-9ee26f68a8ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The capital city of the United States is Washington, D.C. It is not a state, so it does not have a traditional state capital. Instead, it serves as the seat of government for the entire country. If you have any specific questions about Washington, D.C., please let me know.\n"
+     ]
+    }
+   ],
    "source": [
     "import regex as re\n",
     "\n",
