--- a/run_finetun.ipynb
+++ b/run_finetun.ipynb
@@ -1,65 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "c0b13269-c4c1-4b1b-9dbc-cd9ebb5eb515",
+   "cell_type": "markdown",
+   "id": "475a0054-2aee-49b6-9232-09449b04a465",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd9c24c54d2c4467bbcad5a5f93f79f3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PhiForCausalLM(\n",
-      "  (model): PhiModel(\n",
-      "    (embed_tokens): Embedding(51200, 2560)\n",
-      "    (embed_dropout): Dropout(p=0.0, inplace=False)\n",
-      "    (layers): ModuleList(\n",
-      "      (0-31): 32 x PhiDecoderLayer(\n",
-      "        (self_attn): PhiAttention(\n",
-      "          (q_proj): Linear(in_features=2560, out_features=2560, bias=True)\n",
-      "          (k_proj): Linear(in_features=2560, out_features=2560, bias=True)\n",
-      "          (v_proj): Linear(in_features=2560, out_features=2560, bias=True)\n",
-      "          (dense): Linear(in_features=2560, out_features=2560, bias=True)\n",
-      "          (rotary_emb): PhiRotaryEmbedding()\n",
-      "        )\n",
-      "        (mlp): PhiMLP(\n",
-      "          (activation_fn): NewGELUActivation()\n",
-      "          (fc1): Linear(in_features=2560, out_features=10240, bias=True)\n",
-      "          (fc2): Linear(in_features=10240, out_features=2560, bias=True)\n",
-      "        )\n",
-      "        (input_layernorm): LayerNorm((2560,), eps=1e-05, elementwise_affine=True)\n",
-      "        (resid_dropout): Dropout(p=0.1, inplace=False)\n",
-      "      )\n",
-      "    )\n",
-      "    (final_layernorm): LayerNorm((2560,), eps=1e-05, elementwise_affine=True)\n",
-      "  )\n",
-      "  (lm_head): Linear(in_features=2560, out_features=51200, bias=True)\n",
-      ")\n"
-     ]
-    }
-   ],
    "source": [
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import AutoModelForCausalLM, BitsAndBytesConfig, AutoTokenizer, TrainingArguments\n",
@@ -71,14 +15,14 @@
     "device_map = \"auto\"\n",
     "base_model_name = \"microsoft/phi-2\"\n",
     "basetokenizer = AutoTokenizer.from_pretrained(base_model_name, trust_remote_code=True)\n",
-    "model = AutoModelForCausalLM.from_pretrained(base_model_name, device_map=device_map, torch_dtype=torch.bfloat16)\n",
+    "model = AutoModelForCausalLM.from_pretrained(base_model_name,return_dict=True, device_map=device_map, torch_dtype=torch.bfloat16)\n",
     "\n",
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "de2ddd40-c2cf-4dbc-85a3-8fe256772bba",
    "metadata": {},
    "outputs": [
@@ -128,6 +72,67 @@
     "\n",
     "text = basetokenizer.batch_decode(outputs)[0]\n",
     "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5707a624-3be9-4be6-8b5c-16a5f8e7159f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import PeftModel\n",
+    "basetokenizer.add_tokens([\"<|im_start|>\", \"<PAD>\"])\n",
+    "basetokenizer.pad_token = \"<PAD>\"\n",
+    "basetokenizer.add_special_tokens(dict(eos_token=\"<|im_end|>\"))\n",
+    "\n",
+    "if basetokenizer.pad_token is None:\n",
+    "   basetokenizer.pad_token = basetokenizer.eos_token\n",
+    "\n",
+    "model.resize_token_embeddings(\n",
+    "    new_num_tokens=len(basetokenizer),\n",
+    "    pad_to_multiple_of=64)   # phi2 default is 64, see configuration_phi.py\n",
+    "model.config.eos_token_id = basetokenizer.eos_token_id\n",
+    "\n",
+    "\n",
+    "output_dir = \"phi2-riddles\"\n",
+    "    \n",
+    "Loramodel = PeftModel.from_pretrained(model,output_dir).to('cuda:0')\n",
+    "\n",
+    "Loramodel = Loramodel.merge_and_unload()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ef38d22a-fff3-4d1d-b5f7-88c5252afc97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The capital city of the United States is Washington, D.C. It is not a state, so it does not have a traditional state capital. Instead, it serves as the seat of government for the entire country. If you have any specific questions about Washington, D.C., please let me know.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import regex as re\n",
+    "\n",
+    "chat ='''<|im_start|>system\\nI'm AI assitant can help you in chat mode<|im_end|>\n",
+    "<|im_start|>user\\nwhich city is the capital city of Unite States<|im_end|>\n",
+    "<|im_start|>assistant'''\n",
+    "\n",
+    "inputs = basetokenizer(chat, return_tensors=\"pt\", return_attention_mask=True).to('cuda:0')\n",
+    "\n",
+    "\n",
+    "outputs = Loramodel.generate(**inputs,pad_token_id=basetokenizer.pad_token_id,max_length=200)\n",
+    "text = basetokenizer.batch_decode(outputs)[0]\n",
+    "\n",
+    "\n",
+    "print(re.split(r\"(<\\|im_end\\|>)\", text.replace(chat,\"\"))[0])"
    ]
   },
   {
